--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
             </ul>
             <button id="nav-btn" class="nav-button">
-              <img id="nav-btn-img" src="/img/icon/NAV.svg" alt="Nav button" />
+              <img id="nav-btn-img" src="img/icon/NAV.svg" alt="Nav button" />
             </button>
           </nav>
         </div>
@@ -59,7 +59,7 @@
           </div>
 
           <div class="header-img">
-            <img src="/img/hero/hero.png" alt="frilanser" />
+            <img src="img/hero/hero.png" alt="frilanser" />
           </div>
         </div>
       </div>
@@ -68,7 +68,7 @@
       <div class="container">
         <div class="servirces-row">
           <div class="service-card" data-aos="fade-up">
-            <img src="/img/icon/graphic1.svg" alt="UI/UX Design" />
+            <img src="img/icon/graphic1.svg" alt="UI/UX Design" />
             <h2 class="service-title">UI/UX Design</h2>
             <p class="service-text">
               Our design is translated into comprehensive digital environments
@@ -76,7 +76,7 @@
             </p>
           </div>
           <div class="service-card" data-aos="fade-up">
-            <img src="/img/icon/startup1.svg" alt="Development" />
+            <img src="img/icon/startup1.svg" alt="Development" />
             <h2 class="service-title">Development</h2>
             <p class="service-text">
               Our design is translated into comprehensive digital environments
@@ -84,7 +84,7 @@
             </p>
           </div>
           <div class="service-card" data-aos="fade-up">
-            <img src="/img/icon/browser1.svg" alt="Software testing" />
+            <img src="img/icon/browser1.svg" alt="Software testing" />
             <h2 class="service-title">Software testing</h2>
             <p class="service-text">
               Our design is translated into comprehensive digital environments
@@ -104,7 +104,7 @@
           data-aos="flip-up"
           data-aos-duration="1000"
         >
-          <img src="/img/project/Слой8-1.jpeg" alt="" class="project-img" />
+          <img src="img/project/Слой8-1.jpeg" alt="" class="project-img" />
           <h4 class="project-title">
             <a href="#">Online fashion store - Homepage</a>
           </h4>
@@ -115,7 +115,7 @@
           data-aos-duration="1000"
         >
           <img
-            src="/img/project/reebok_web-3.jpeg"
+            src="img/project/reebok_web-3.jpeg"
             alt=""
             class="project-img"
           />
@@ -127,7 +127,7 @@
           data-aos-duration="1000"
         >
           <img
-            src="/img/project/reebok_web-2.jpeg"
+            src="img/project/reebok_web-2.jpeg"
             alt=""
             class="project-img"
           />
@@ -152,10 +152,10 @@
           <a href="#" class="btn">Send message</a>
         </div>
         <div class="contacts-social">
-          <a href="#"><img src="/img/icon/LinkedIn.svg" alt="LinkedIn" /></a>
-          <a href="#"><img src="/img/icon/Instargam.svg" alt="Instagram" /></a>
-          <a href="#"><img src="/img/icon/Behance.svg" alt="Behance" /></a>
-          <a href="#"><img src="/img/icon/Dribble.svg" alt="Dribble" /></a>
+          <a href="#"><img src="img/icon/LinkedIn.svg" alt="LinkedIn" /></a>
+          <a href="#"><img src="img/icon/Instargam.svg" alt="Instagram" /></a>
+          <a href="#"><img src="img/icon/Behance.svg" alt="Behance" /></a>
+          <a href="#"><img src="img/icon/Dribble.svg" alt="Dribble" /></a>
         </div>
         <div class="contacts-footer">
           <p>Like me on<br />LinkedIn, Instagram, Behance, Dribble</p>
@@ -168,6 +168,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
